--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ android {
         exclude 'META-INF/DEPENDENCIES'
         exclude 'META-INF/ASL2.0'
         exclude 'META-INF/NOTICE'
-        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
     }
 }
 
@@ -51,6 +51,7 @@ dependencies {
     compile appDependencies.okhttp
     compile appDependencies.okhttp_urlconnection
     compile appDependencies.fresco
+    compile appDependencies.activeandroid
     compile appDependencies.fastjson
     compile appDependencies.eventbus
     compile appDependencies.dagger
