--- a/config/config.gradle
+++ b/config/config.gradle
@@ -5,30 +5,49 @@ allprojects {
 }
 
 ext {
-    //Android
-    androidCompileSdkVersion = 22
-    androidBuildToolsVersion = "22.0.1"
-    androidMinSdkVersion     = 14
-    androidTargetSdkVersion  = 22
 
-    versionCode              = 5
-    versionName              = "V2.0"
+    applicationId               = "com.mredrcok.cyxbs"
 
-    applicationId            = "com.mredrcok.cyxbs"
+    //app
+    androidCompileSdkVersion    = 22
+    androidBuildToolsVersion    = "22.0.1"
+    androidMinSdkVersion        = 14
+    androidTargetSdkVersion     = 22
+
+    versionCode                 = 5
+    versionName                 = "V2.0"
+
+    //libraries
+    appcompatVersion            = '22.0.0'
+    cardviewVersion             = '22.0.0'
+    paletteVersion              = '22.0.0'
+    recyclerviewVersion         = '22.0.0'
+    retrofitVersion             = '1.9.0'
+    okhttpVersion               = '2.0.0'
+    okhttp_urlconnectionVersion = '2.3.0'
+    activeandroidVersion        = '3.1.0-SNAPSHOT'
+    fastjsonVersion             = '1.1.45.android'
+    eventbusVersion             = '2.4.0'
+    daggerVersion               = '2.0'
+    butterknifeVersion          = '6.1.0'
+    frescoVersion               = '0.1.0+'
 
     appDependencies = [
-            appcompat_v7:"com.android.support:appcompat-v7:22.0.0",
-            cardview:"com.android.support:cardview-v7:22.0.0",
-            palette:"com.android.support:palette-v7:22.0.0",
-            recyclerview:"com.android.support:recyclerview-v7:22.0.0",
-            retrofit:"com.squareup.retrofit:retrofit:1.9.0",
-            okhttp:"com.squareup.okhttp:okhttp:2.0.0",
-            okhttp_urlconnection:"com.squareup.okhttp:okhttp-urlconnection:2.3.0",
-            fresco:"com.michaelpardo:activeandroid:3.1.0-SNAPSHOT",
-            fastjson:"com.alibaba:fastjson:1.1.45.android",
-            eventbus:"de.greenrobot:eventbus:2.4.0",
-            dagger:"com.google.dagger:dagger:2.0",
-            butterknife:"com.jakewharton:butterknife:6.1.0",
+            appcompat_v7        : "com.android.support:appcompat-v7:${appcompatVersion}",
+            cardview            : "com.android.support:cardview-v7:${cardviewVersion}",
+            palette             : "com.android.support:palette-v7:${paletteVersion}",
+            recyclerview        : "com.android.support:recyclerview-v7:${recyclerviewVersion}",
+            retrofit            : "com.squareup.retrofit:retrofit:${retrofitVersion}",
+            okhttp              : "com.squareup.okhttp:okhttp:${okhttpVersion}",
+            okhttp_urlconnection: "com.squareup.okhttp:okhttp-urlconnection:${okhttp_urlconnectionVersion}",
+            activeandroid       : "com.michaelpardo:activeandroid:${activeandroidVersion}",
+            fastjson            : "com.alibaba:fastjson:${fastjsonVersion}",
+            eventbus            : "de.greenrobot:eventbus:${eventbusVersion}",
+            dagger              : "com.google.dagger:dagger:${daggerVersion}",
+            daggerCompiler      : "com.google.dagger:dagger-compiler:${daggerVersion}",
+            butterknife         : "com.jakewharton:butterknife:${butterknifeVersion}",
+            fresco              : "com.facebook.fresco:fresco:${frescoVersion}",
+
     ]
 
 }
