--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
 
     lintOptions {
         abortOnError false
+        disable 'InvalidPackage'
     }
 
     packagingOptions {
@@ -31,6 +32,7 @@ android {
         exclude 'META-INF/ASL2.0'
         exclude 'META-INF/NOTICE'
         exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
     }
 }
 
@@ -51,6 +53,7 @@ dependencies {
     compile appDependencies.okhttp
     compile appDependencies.okhttp_urlconnection
     compile appDependencies.fresco
+    compile appDependencies.imagepipeline_okhttp
     compile appDependencies.activeandroid
     compile appDependencies.fastjson
     compile appDependencies.eventbus
