--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,13 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".config.MApplication"
         android:theme="@style/AppTheme" >
+
+        <!--db configuration-->
+        <meta-data android:name="AA_DB_NAME" android:value="cyxbs.db"/>
+        <meta-data android:name="AA_DB_VERSION" android:value="1"/>
+
         <activity
             android:name=".presenter.activity.MainActivity"
             android:label="@string/app_name" >
