--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         <meta-data android:name="AA_DB_VERSION" android:value="1"/>
 
         <activity
-            android:name=".presenter.activity.MainActivity"
+            android:name=".presenter.activity.HomeActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
