--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     def globalConfiguration = rootProject.extensions.getByName("ext")
@@ -57,8 +58,8 @@ dependencies {
     compile appDependencies.activeandroid
     compile appDependencies.fastjson
     compile appDependencies.eventbus
-//    compile appDependencies.dagger
-//    compile appDependencies.daggerCompiler
     compile appDependencies.butterknife
     compile appDependencies.logger
+    compile appDependencies.dagger
+    apt appDependencies.daggerCompiler
 }
