--- a/model/build.gradle
+++ b/model/build.gradle
@@ -1,26 +1,27 @@
-//apply plugin: 'com.android.library'
-//apply plugin: 'com.neenbedankt.android-apt'
-apply plugin: 'java'
-sourceCompatibility = 1.6
-targetCompatibility = 1.6
+apply plugin: 'com.android.library'
+apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'me.tatarka.retrolambda'
+//apply plugin: 'java'
+//sourceCompatibility = 1.6
+//targetCompatibility = 1.6
 
-//android {
-//    def globalConfiguration = rootProject.extensions.getByName("ext")
-//
-//    compileSdkVersion globalConfiguration.getAt("androidCompileSdkVersion")
-//    buildToolsVersion globalConfiguration.getAt("androidBuildToolsVersion")
-//
-//    defaultConfig {
-//        minSdkVersion globalConfiguration.getAt("androidMinSdkVersion")
-//        targetSdkVersion globalConfiguration.getAt("androidTargetSdkVersion")
-//        versionCode globalConfiguration.getAt("versionCode")
-//    }
-//
-//    compileOptions {
-//        sourceCompatibility JavaVersion.VERSION_1_7
-//        targetCompatibility JavaVersion.VERSION_1_7
-//    }
-//}
+android {
+    def globalConfiguration = rootProject.extensions.getByName("ext")
+
+    compileSdkVersion globalConfiguration.getAt("androidCompileSdkVersion")
+    buildToolsVersion globalConfiguration.getAt("androidBuildToolsVersion")
+
+    defaultConfig {
+        minSdkVersion globalConfiguration.getAt("androidMinSdkVersion")
+        targetSdkVersion globalConfiguration.getAt("androidTargetSdkVersion")
+        versionCode globalConfiguration.getAt("versionCode")
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+}
 
 configurations {
     provided
