add some DI, update lambda, update logo, update domain、model

--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -33,8 +33,23 @@ sourceSets {
     }
 }
 
+repositories {
+    mavenCentral()
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+}
+
 dependencies {
     compile project(':model')
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    def domainDependencies = rootProject.ext.domainDependencies
+
+//    apt dataDependencies.daggerCompiler
+    provided domainDependencies.daggerCompiler
+    provided domainDependencies.javaxAnnotation
+
+    compile domainDependencies.dagger
+    compile domainDependencies.rxJava
+    compile domainDependencies.eventbus
 }
