--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".config.MApplication"
+        android:name=".CyxbsApplication"
         android:theme="@style/AppTheme" >
 
         <!--db configuration-->
